# bonsai-native

./: .gitignore  README.md  bonsai_android.opam  bonsai_apple.opam  bonsai_native.opam  dune-project
.github/workflows/: ci.yml
android/: gradle.properties  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: bonsai_counter.json
android/app/src/main/java/com/logseq/bonsaiandroid/: BonsaiAndroidNative.kt  MainActivity.kt
android/app/src/main/res/values/: strings.xml  styles.xml
android/examples/: android_counter_entry.ml  android_demo_components.ml  bonsai_android_jni_wrapper.c  counter_component.ml  counter_interaction_smoke.ml  dune  export_counter_json.ml  shared_surface_smoke.ml
apple/examples/: Info.mac.plist  dune  ios_app.ml  mac_app.ml  todo.ml
apple/src/: bonsai_apple.ml  bonsai_apple.mli  dune
apple/swiftui/: BonsaiNativeSwiftUI.swift  BonsaiNativeSwiftUIMac.swift  bonsai_apple_swiftui.ml  bonsai_apple_swiftui.mli  bonsai_apple_swiftui_stubs.c  dune
apple/test/: bonsai_apple_test.ml
apple/uikit/: bonsai_apple_uikit.ml
docs/: android-native-build.md  architecture.md  questions.md
examples/: android_counter_entry.ml  counter.ml  counter_component.ml  dune  export_counter_json.ml
jni/: bonsai_android_jni.c
native/: bonsai_native.ml  bonsai_native.mli  dune
native/test/: bonsai_native_app_driver_test.ml  dune
scripts/: apple-codesign-identity.sh  build-android-native.sh  build-swiftui-renderer.sh  generate-android-assets.sh  ios-sdkroot-flags.sh  test-android-emulator.sh
src/: bonsai_android.ml  bonsai_android.mli  dune
test/: dune
web/demo/: dune
