opam-version: "2.0"
maintainer: "Tienson Qin"
authors: ["Tienson Qin"]
homepage: "https://github.com/tiensonqin/bonsai-android"
bug-reports: "https://github.com/tiensonqin/bonsai-android/issues"
dev-repo: "git+https://github.com/tiensonqin/bonsai-android.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "dune" {>= "3.17.0"}
  "bonsai" {= "v0.18~preview.130.100+614"}
  "bonsai_native"
  "core" {= "v0.18~preview.130.100+614"}
  "ppx_jane" {= "v0.18~preview.130.100+614"}
]
synopsis: "Native Android UI backend for Bonsai"
description: """
A Jetpack Compose backed native Android UI framework for OCaml built on Bonsai.
"""
