opam-version: "2.0"
maintainer: "Tienson Qin"
authors: ["Tienson Qin"]
homepage: "https://github.com/tiensonqin/bonsai-native"
bug-reports: "https://github.com/tiensonqin/bonsai-native/issues"
dev-repo: "git+https://github.com/tiensonqin/bonsai-native.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0" & < "5.3.0"}
  "dune" {>= "3.17.0"}
  "bonsai" {= "v0.18~preview.130.100+614"}
  "bonsai_native"
  "core" {= "v0.18~preview.130.100+614"}
  "ppx_jane" {= "v0.18~preview.130.100+614"}
]
synopsis: "Native Apple UI backend for Bonsai"
description: """
A SwiftUI-like declarative native Apple UI framework for OCaml built on Bonsai and Camlkit.
"""
