(executables
 (names
  counter
  todo
  searchable_list
  navigation)
 (modules
  counter
  todo
  searchable_list
  navigation)
 (enabled_if
  (not
   (or
    (= %{context_name} device.ios)
    (= %{context_name} simulator.ios)
    (= %{context_name} simulator-arm.ios)
    (= %{context_name} catalyst.ios))))
 (libraries bonsai_apple core)
 (preprocess
  (pps ppx_jane bonsai.ppx_bonsai)))

(executable
 (name ios_app)
 (modules ios_app counter todo searchable_list)
 (enabled_if
  (or
   (= %{context_name} device.ios)
   (= %{context_name} simulator.ios)
   (= %{context_name} simulator-arm.ios)
   (= %{context_name} catalyst.ios)))
 (flags
  :standard
  -ccopt
  "-target"
  -ccopt
  "%{env:IOS_TARGET=arm64-apple-ios17.0-simulator}"
  -ccopt
  "-arch"
  -ccopt
  "%{env:IOS_ARCH=arm64}"
  (:include ios_sdkroot_flags.sexp)
  -ccopt
  "-miphoneos-version-min=17.0"
  -ccopt
  "-framework UIKit"
  -ccopt
  "-framework Security")
 (libraries
  bonsai_apple
  bonsai_apple_uikit
  core
  core_kernel.caml_threads
  threads.posix
  camlkit-base.CoreGraphics
  camlkit-base.Foundation
  camlkit-gui.UIKit)
 (preprocess
  (pps ppx_jane bonsai.ppx_bonsai)))

(rule
 (targets ios_sdkroot_flags.sexp)
 (deps ../../scripts/ios-sdkroot-flags.sh)
 (enabled_if
  (or
   (= %{context_name} device.ios)
   (= %{context_name} simulator.ios)
   (= %{context_name} simulator-arm.ios)
   (= %{context_name} catalyst.ios)))
 (action
  (with-stdout-to
   %{targets}
   (run ../../scripts/ios-sdkroot-flags.sh))))

(subdir
 BonsaiNativeCounter.app
 (rule
  (alias default)
  (deps
   ../Info.plist
   ../ios_app.exe
   ../../../scripts/apple-codesign-identity.sh)
  (targets Info.plist BonsaiNativeCounter)
  (enabled_if
   (or
    (= %{context_name} device.ios)
    (= %{context_name} simulator.ios)
    (= %{context_name} simulator-arm.ios)
    (= %{context_name} catalyst.ios)))
  (action
   (progn
    (copy ../Info.plist Info.plist)
    (copy ../ios_app.exe BonsaiNativeCounter)
    (run
     /bin/sh
     -c
     "codesign --force --sign \"$(%{dep:../../../scripts/apple-codesign-identity.sh})\" --timestamp=none BonsaiNativeCounter")))))

(subdir
 BonsaiNativeDemos.app
 (rule
  (alias default)
  (deps
   ../Info.demos.plist
   ../ios_app.exe
   ../../../scripts/apple-codesign-identity.sh)
  (targets Info.plist BonsaiNativeDemos)
  (enabled_if
   (or
    (= %{context_name} device.ios)
    (= %{context_name} simulator.ios)
    (= %{context_name} simulator-arm.ios)
    (= %{context_name} catalyst.ios)))
  (action
   (progn
    (copy ../Info.demos.plist Info.plist)
    (copy ../ios_app.exe BonsaiNativeDemos)
    (run
     /bin/sh
     -c
     "codesign --force --sign \"$(%{dep:../../../scripts/apple-codesign-identity.sh})\" --timestamp=none BonsaiNativeDemos")))))
