(library
 (name bonsai_apple_examples)
 (modules counter todo searchable_list navigation ios_demo_app)
 (libraries bonsai_apple))

(rule
 (targets BonsaiNativeSwiftUI.o)
 (deps
  ../../scripts/build-swiftui-renderer.sh
  ../swiftui/BonsaiNativeSwiftUI.swift)
 (enabled_if
  (or
   (= %{context_name} device.ios)
   (= %{context_name} simulator.ios)
   (= %{context_name} simulator-arm.ios)
   (= %{context_name} catalyst.ios)))
 (action
  (run /bin/sh ../../scripts/build-swiftui-renderer.sh %{targets})))

(rule
 (targets BonsaiNativeSwiftUIMac.o)
 (deps
  ../../scripts/build-swiftui-renderer.sh
  ../swiftui/BonsaiNativeSwiftUIMac.swift)
 (enabled_if
  (= %{context_name} default))
 (action
  (run
   /bin/sh
   -c
   "SWIFT_SOURCE=apple/swiftui/BonsaiNativeSwiftUIMac.swift SWIFT_SDK=macosx SWIFT_TARGET=${MACOS_TARGET:-$(uname -m)-apple-macosx14.0} /bin/sh ../../scripts/build-swiftui-renderer.sh BonsaiNativeSwiftUIMac.o")))

(rule
 (targets swiftui_link_flags.sexp)
 (deps BonsaiNativeSwiftUI.o)
 (enabled_if
  (or
   (= %{context_name} device.ios)
   (= %{context_name} simulator.ios)
   (= %{context_name} simulator-arm.ios)
   (= %{context_name} catalyst.ios)))
 (action
  (with-stdout-to
   %{targets}
   (run /bin/sh -c "printf '(-ccopt \"%s\")' \"$PWD/BonsaiNativeSwiftUI.o\""))))

(rule
 (targets swiftui_mac_link_flags.sexp)
 (deps BonsaiNativeSwiftUIMac.o)
 (enabled_if
  (= %{context_name} default))
 (action
  (with-stdout-to
   %{targets}
   (run
    /bin/sh
    -c
    "printf '(-ccopt \"%s\")' \"$PWD/BonsaiNativeSwiftUIMac.o\""))))

(executable
 (name ios_app)
 (modules ios_app)
 (link_deps BonsaiNativeSwiftUI.o)
 (enabled_if
  (or
   (= %{context_name} device.ios)
   (= %{context_name} simulator.ios)
   (= %{context_name} simulator-arm.ios)
   (= %{context_name} catalyst.ios)))
 (flags
  :standard
  -ccopt
  "-target"
  -ccopt
  "%{env:IOS_TARGET=arm64-apple-ios17.0-simulator}"
  -ccopt
  "-arch"
  -ccopt
  "%{env:IOS_ARCH=arm64}"
  (:include ios_sdkroot_flags.sexp)
  -ccopt
  "-miphoneos-version-min=17.0"
  -ccopt
  "-Wl,-dead_strip"
  (:include swiftui_link_flags.sexp)
  -ccopt
  "-framework UIKit"
  -ccopt
  "-framework SwiftUI"
  -ccopt
  "-framework Foundation"
  -ccopt
  "-framework CryptoKit"
  -ccopt
  "-framework PhotosUI"
  -ccopt
  "-framework UniformTypeIdentifiers"
  -ccopt
  "-framework Vision"
  -ccopt
  "-framework Security")
 (libraries
  bonsai_apple
  bonsai_apple_swiftui
  bonsai_apple_examples
  threads.posix))

(executable
 (name mac_app)
 (modules mac_app)
 (link_deps BonsaiNativeSwiftUIMac.o)
 (enabled_if
  (= %{context_name} default))
 (flags
  :standard
  -ccopt
  "-Wl,-dead_strip"
  (:include swiftui_mac_link_flags.sexp)
  -ccopt
  "-framework AppKit"
  -ccopt
  "-framework SwiftUI"
  -ccopt
  "-framework Foundation"
  -ccopt
  "-framework UniformTypeIdentifiers")
 (libraries
  bonsai_apple
  bonsai_apple_swiftui
  bonsai_apple_examples
  threads.posix))

(rule
 (targets ios_sdkroot_flags.sexp)
 (deps ../../scripts/ios-sdkroot-flags.sh)
 (enabled_if
  (or
   (= %{context_name} device.ios)
   (= %{context_name} simulator.ios)
   (= %{context_name} simulator-arm.ios)
   (= %{context_name} catalyst.ios)))
 (action
  (with-stdout-to
   %{targets}
   (run ../../scripts/ios-sdkroot-flags.sh))))

(subdir
 BonsaiNativeCounter.app
 (rule
  (alias default)
  (deps
   ../Info.plist
   ../ios_app.exe
   ../../../scripts/apple-codesign-identity.sh)
  (targets Info.plist BonsaiNativeCounter)
  (enabled_if
   (or
    (= %{context_name} device.ios)
    (= %{context_name} simulator.ios)
    (= %{context_name} simulator-arm.ios)
    (= %{context_name} catalyst.ios)))
  (action
   (progn
    (copy ../Info.plist Info.plist)
    (copy ../ios_app.exe BonsaiNativeCounter)
    (run chmod u+w BonsaiNativeCounter)
    (run strip -x BonsaiNativeCounter)
    (run
     /bin/sh
     -c
     "codesign --force --sign \"$(%{dep:../../../scripts/apple-codesign-identity.sh})\" --timestamp=none BonsaiNativeCounter")))))

(subdir
 BonsaiNativeDemos.app
 (rule
  (alias default)
  (deps
   ../Info.demos.plist
   ../ios_app.exe
   ../../../scripts/apple-codesign-identity.sh)
  (targets Info.plist BonsaiNativeDemos)
  (enabled_if
   (or
    (= %{context_name} device.ios)
    (= %{context_name} simulator.ios)
    (= %{context_name} simulator-arm.ios)
    (= %{context_name} catalyst.ios)))
  (action
   (progn
    (copy ../Info.demos.plist Info.plist)
    (copy ../ios_app.exe BonsaiNativeDemos)
    (run chmod u+w BonsaiNativeDemos)
    (run strip -x BonsaiNativeDemos)
    (run
     /bin/sh
     -c
     "codesign --force --sign \"$(%{dep:../../../scripts/apple-codesign-identity.sh})\" --timestamp=none BonsaiNativeDemos")))))

(subdir
 BonsaiNativeMacDemos.app
 (rule
  (alias default)
  (deps Contents/Info.plist Contents/MacOS/BonsaiNativeMacDemos)
  (enabled_if
   (= %{context_name} default))
  (action (progn)))
 (subdir
  Contents
  (rule
   (deps ../../Info.mac.plist)
   (targets Info.plist)
   (enabled_if
    (= %{context_name} default))
   (action
    (copy ../../Info.mac.plist Info.plist)))
  (subdir
   MacOS
   (rule
    (deps
     ../../../mac_app.exe
     ../../../../../scripts/apple-codesign-identity.sh)
    (targets BonsaiNativeMacDemos)
    (enabled_if
     (= %{context_name} default))
    (action
     (progn
      (copy ../../../mac_app.exe BonsaiNativeMacDemos)
      (run chmod u+w BonsaiNativeMacDemos)
      (run strip -x BonsaiNativeMacDemos)
      (run
       /bin/sh
       -c
       "codesign --force --sign \"$(%{dep:../../../../../scripts/apple-codesign-identity.sh})\" --timestamp=none BonsaiNativeMacDemos")))))))
