(library
 (name bonsai_apple_swiftui)
 (public_name bonsai_apple.swiftui)
 (enabled_if
  (or
   (= %{context_name} default)
   (= %{context_name} simulator)
   (= %{context_name} device.ios)
   (= %{context_name} simulator.ios)
   (= %{context_name} simulator-arm.ios)
   (= %{context_name} catalyst.ios)))
 (foreign_stubs
  (language c)
  (names bonsai_apple_swiftui_stubs))
 (c_library_flags
  (:standard -framework Foundation -framework SwiftUI))
 (libraries bonsai_apple core)
 (preprocess
  (pps ppx_jane)))
